--- a/react/package.json
+++ b/react/package.json
@@ -10,12 +10,11 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@vime/react": "^5.0.33",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "2.1.2"
   },
   "scripts": {
     "start": "PORT=3006 react-scripts start",
